# logistic_map

./: .gitignore  LICENSE  README.md  mix.exs
bench/: logistic_map_bench.exs
config/: config.exs
lib/: logistic_map.ex  logistic_map_Nif.ex
native/logistic_map/: Cargo.toml  README.md  build.rs
native/logistic_map/src/: lib.rs
native/logistic_map/src/c/: logimap.c
test/: logistic_map_test.exs
